--- a/package.json
+++ b/package.json
@@ -1,7 +1,19 @@
 {
   "devDependencies": {
     "@eslint/js": "^9.24.0",
+    "@playwright/test": "^1.51.1",
     "eslint": "^9.24.0",
-    "globals": "^16.0.0"
+    "globals": "^16.0.0",
+    "jest": "^29.7.0",
+    "vite": "^5.2.0"
+  },
+  "dependencies": {
+    "babylonjs": "^8.3.0"
+  },
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "preview": "vite preview",
+    "test": "jest"
   }
 }
