--- a/package.json
+++ b/package.json
@@ -7,13 +7,19 @@
     "eslint": "^8.57.1",
     "eslint-plugin-markdown": "^5.1.0",
     "eslint-plugin-react": "^7.37.5",
+    "eslint-plugin-react-hooks": "^5.2.0",
     "globals": "^16.0.0",
     "jest": "^29.7.0",
     "vite": "^5.2.0"
   },
   "dependencies": {
-    "babylonjs": "^8.3.0",
-    "babylonjs-loaders": "^8.3.0",
+    "@babylonjs/core": "^8.3.1",
+    "@babylonjs/loaders": "^8.3.1",
+    "@babylonjs/procedural-textures": "^8.3.1",
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/icons-material": "^7.0.2",
+    "@mui/material": "^7.0.2",
     "react": "^19.1.0",
     "react-dom": "^19.1.0"
   },
