Refactor setup effect in BabylonSceneContent to fix screen blanking

--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "test": "jest"
+    "test": "jest",
+    "lint": "eslint \"src/**/*.{js,jsx}\""
   }
 }
