--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "@babel/preset-react": "^7.26.3",
     "@eslint/js": "^9.24.0",
     "@playwright/test": "^1.51.1",
+    "@types/express": "^5.0.1",
     "@types/jest": "^29.5.14",
     "@types/node": "^22.15.3",
     "@types/react": "^19.1.2",
@@ -11,6 +12,7 @@
     "@typescript-eslint/eslint-plugin": "^8.31.1",
     "@typescript-eslint/parser": "^8.31.1",
     "@vitejs/plugin-react": "^4.4.1",
+    "cross-env": "^7.0.3",
     "eslint": "^8.57.1",
     "eslint-plugin-markdown": "^5.1.0",
     "eslint-plugin-react": "^7.37.5",
@@ -18,7 +20,9 @@
     "globals": "^16.0.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
+    "kill-port": "^2.0.1",
     "ts-jest": "^29.3.2",
+    "ts-node": "^10.9.2",
     "typescript": "^5.8.3",
     "vite": "^5.2.0"
   },
@@ -32,6 +36,8 @@
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "bash": "^0.0.1",
+    "express": "^4.18.2",
+    "prismarine-nbt": "^2.7.0",
     "react": "^19.1.0",
     "react-color": "^2.19.3",
     "react-dom": "^19.1.0"
@@ -39,9 +45,13 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
+    "build:server": "tsc --project tsconfig.node.json --esModuleInterop",
+    "build:all": "npm run build && npm run build:server",
     "preview": "vite preview",
     "test": "jest",
     "lint": "eslint \"src/**/*.{js,jsx,ts,tsx}\"",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "start": "cross-env NODE_ENV=production node server.js",
+    "server:dev": "ts-node --project tsconfig.node.json server.ts"
   }
 }
